--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="tab_settings">Instellingen</string>
     <string name="tab_overview">Overzicht</string>
@@ -211,4 +210,7 @@
     <string name="privacy_settings">Privacy-instellingen</string>
     <string name="hide_med_name">Verberg medicijnnaam in melding</string>
     <string name="re_raise_event">De gebeurtenis opnieuw activeren</string>
+    <string name="notification_reminder_settings">Instellingen voor meldingen en herinneringen</string>
+    <string name="display_settings">Weergave-instellingen</string>
+    <string name="use_relative_date_time">Toon relatieve datum/tijd voor herinneringen</string>
 </resources>
