--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="tab_settings">Настройки</string>
     <string name="tab_overview">Обзор</string>
@@ -218,4 +217,7 @@
     <string name="privacy_settings">Настройки конфиденциальности</string>
     <string name="hide_med_name">Скрыть название лекарства в уведомлении</string>
     <string name="re_raise_event">Повторно вызвать событие</string>
+    <string name="notification_reminder_settings">Настройки уведомлений и напоминаний</string>
+    <string name="display_settings">Настройки дисплея</string>
+    <string name="use_relative_date_time">Показывайте относительную дату/время для напоминаний</string>
 </resources>
