--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="tab_settings">Ayarlar</string>
     <string name="tab_overview">Genel Bakış</string>
@@ -211,4 +210,7 @@
     <string name="privacy_settings">Gizlilik ayarları</string>
     <string name="hide_med_name">Bildirimde ilaç adını gizleme</string>
     <string name="re_raise_event">Olayı yeniden tetiklemek</string>
+    <string name="notification_reminder_settings">Bildirim ve hatırlatma ayarları</string>
+    <string name="display_settings">Ekran ayarları</string>
+    <string name="use_relative_date_time">Hatırlatıcılar için ilgili tarih/saati göster</string>
 </resources>
