--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="enable_alarm_dialog">Щоб дозволити планування точних будильників, увімкніть цю опцію для MedTimer у наступному меню</string>
     <string name="tab_overview">Огляд</string>
@@ -16,7 +15,7 @@
     <string name="are_you_sure_delete_reminder">Ви впевнені що хочете видалити нагадування?</string>
     <plurals name="sum_reminders">
         <item quantity="one">%1$d нагадування\n%2$s</item>
-        <item quantity="few"/>
+        <item quantity="few" />
         <item quantity="many">%1$d нагадування\n%2$s</item>
         <item quantity="other">%1$d нагадування\n%2$s</item>
     </plurals>
@@ -221,4 +220,7 @@
     <string name="privacy_settings">Налаштування конфіденційності</string>
     <string name="hide_med_name">Приховати назву препарату в сповіщенні</string>
     <string name="re_raise_event">Повторно запустити подію</string>
+    <string name="notification_reminder_settings">Налаштування сповіщень та нагадувань</string>
+    <string name="display_settings">Налаштування дисплея</string>
+    <string name="use_relative_date_time">Показувати відносну дату/час для нагадувань</string>
 </resources>
