--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="tab_settings">设置</string>
     <string name="tab_overview">主页</string>
@@ -206,4 +205,7 @@
     <string name="privacy_settings">隐私设置</string>
     <string name="hide_med_name">在通知中隐藏药物名称</string>
     <string name="re_raise_event">重新觸發該事件</string>
+    <string name="notification_reminder_settings">通知和提醒设置</string>
+    <string name="display_settings">显示设置</string>
+    <string name="use_relative_date_time">显示提醒的相对日期/时间</string>
 </resources>
