--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -217,5 +217,6 @@
     <string name="re_raise_event">Riavviare l&amp;apos;evento</string>
     <string name="notification_reminder_settings">Impostazioni di notifica e promemoria</string>
     <string name="display_settings">Impostazioni del display</string>
-    <string name="use_relative_date_time">Mostra la data/ora relativa per i promemoria</string>
+    <string name="use_relative_date_time_summary">Mostra la data/ora relativa per i promemoria</string>
+    <string name="use_relative_date_time">Data/ora relativa</string>
 </resources>
