--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -213,5 +213,6 @@
     <string name="re_raise_event">மீண்டும் உயர்த்தும் நிகழ்வு</string>
     <string name="notification_reminder_settings">அறிவிப்பு மற்றும் நினைவூட்டல் அமைப்புகள்</string>
     <string name="display_settings">காட்சி அமைப்புகள்</string>
-    <string name="use_relative_date_time">நினைவூட்டல்களுக்கு தொடர்புடைய தேதி/நேரத்தை காட்டு</string>
+    <string name="use_relative_date_time_summary">நினைவூட்டல்களுக்கு தொடர்புடைய தேதி/நேரத்தை காட்டு</string>
+    <string name="use_relative_date_time">ஒப்பீட்டு தேதி/நேரம்</string>
 </resources>
