--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -212,5 +212,6 @@
     <string name="re_raise_event">Ereignis erneut auslösen</string>
     <string name="notification_reminder_settings">Einstellungen für Benachrichtigungen und Erinnerungen</string>
     <string name="display_settings">Einstellungen anzeigen</string>
-    <string name="use_relative_date_time">Relatives Datum/Uhrzeit für Erinnerungen anzeigen</string>
+    <string name="use_relative_date_time_summary">Relatives Datum/Uhrzeit für Erinnerungen anzeigen</string>
+    <string name="use_relative_date_time">Relatives Datum/Uhrzeit</string>
 </resources>
