--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -212,5 +212,6 @@
     <string name="re_raise_event">De gebeurtenis opnieuw activeren</string>
     <string name="notification_reminder_settings">Instellingen voor meldingen en herinneringen</string>
     <string name="display_settings">Weergave-instellingen</string>
-    <string name="use_relative_date_time">Toon relatieve datum/tijd voor herinneringen</string>
+    <string name="use_relative_date_time_summary">Toon relatieve datum/tijd voor herinneringen</string>
+    <string name="use_relative_date_time">Relatieve datum/tijd</string>
 </resources>
