--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -212,5 +212,6 @@
     <string name="re_raise_event">Olayı yeniden tetiklemek</string>
     <string name="notification_reminder_settings">Bildirim ve hatırlatma ayarları</string>
     <string name="display_settings">Ekran ayarları</string>
-    <string name="use_relative_date_time">Hatırlatıcılar için ilgili tarih/saati göster</string>
+    <string name="use_relative_date_time_summary">Hatırlatıcılar için ilgili tarih/saati göster</string>
+    <string name="use_relative_date_time">Göreceli tarih/saat</string>
 </resources>
