--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -207,5 +207,6 @@
     <string name="re_raise_event">重新觸發該事件</string>
     <string name="notification_reminder_settings">通知和提醒设置</string>
     <string name="display_settings">显示设置</string>
-    <string name="use_relative_date_time">显示提醒的相对日期/时间</string>
+    <string name="use_relative_date_time_summary">显示提醒的相对日期/时间</string>
+    <string name="use_relative_date_time">相对日期/时间</string>
 </resources>
