--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -217,4 +217,5 @@
     <string name="display_settings">Paramètres d&amp;apos;affichage</string>
     <string name="use_relative_date_time_summary">Afficher la date et l&amp;apos;heure relatives pour les rappels</string>
     <string name="use_relative_date_time">Date/heure relative</string>
+    <string name="invalid_amount">Le montant doit contenir un nombre pour activer le suivi du stock de médicaments pour ce rappel.</string>
 </resources>
