--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -207,4 +207,5 @@
     <string name="display_settings">显示设置</string>
     <string name="use_relative_date_time_summary">显示提醒的相对日期/时间</string>
     <string name="use_relative_date_time">相对日期/时间</string>
+    <string name="invalid_amount">金额必须包含数字，才能为此提醒启用药品库存跟踪。</string>
 </resources>
