--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -212,4 +212,5 @@
     <string name="display_settings">Einstellungen anzeigen</string>
     <string name="use_relative_date_time_summary">Relatives Datum/Uhrzeit für Erinnerungen anzeigen</string>
     <string name="use_relative_date_time">Relatives Datum/Uhrzeit</string>
+    <string name="invalid_amount">Der Betrag muss eine Zahl enthalten, um die Vorratserinnerung zu aktivieren.</string>
 </resources>
