--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -217,4 +217,5 @@
     <string name="display_settings">Impostazioni del display</string>
     <string name="use_relative_date_time_summary">Mostra la data/ora relativa per i promemoria</string>
     <string name="use_relative_date_time">Data/ora relativa</string>
+    <string name="invalid_amount">L&amp;apos;importo deve contenere un numero per abilitare il tracciamento delle scorte di farmaci per questo promemoria.</string>
 </resources>
