--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -212,4 +212,5 @@
     <string name="display_settings">Weergave-instellingen</string>
     <string name="use_relative_date_time_summary">Toon relatieve datum/tijd voor herinneringen</string>
     <string name="use_relative_date_time">Relatieve datum/tijd</string>
+    <string name="invalid_amount">Het bedrag moet een getal bevatten om de medicijnvoorraad-tracking voor deze herinnering in te schakelen.</string>
 </resources>
