--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -212,4 +212,5 @@
     <string name="display_settings">Ekran ayarları</string>
     <string name="use_relative_date_time_summary">Hatırlatıcılar için ilgili tarih/saati göster</string>
     <string name="use_relative_date_time">Göreceli tarih/saat</string>
+    <string name="invalid_amount">Bu hatırlatıcı için ilaç stok takibini etkinleştirmek için miktar bir sayı içermelidir.</string>
 </resources>
