--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -223,4 +223,6 @@
     </plurals>
     <string name="use_relative_date_time">Względna data/godzina</string>
     <string name="invalid_amount">Kwota musi zawierać liczbę, aby włączyć śledzenie zapasów leków dla tego przypomnienia.</string>
+    <string name="time_reminder_type_hint">Przypomina o określonej porze dnia.</string>
+    <string name="interval_reminder_type_hint">Przypomina po upływie określonego czasu od ostatniego przypomnienia.</string>
 </resources>
