--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -208,4 +208,6 @@
     <string name="use_relative_date_time_summary">显示提醒的相对日期/时间</string>
     <string name="use_relative_date_time">相对日期/时间</string>
     <string name="invalid_amount">金额必须包含数字，才能为此提醒启用药品库存跟踪。</string>
+    <string name="time_reminder_type_hint">在一天中的特定时间提醒。</string>
+    <string name="interval_reminder_type_hint">在最后一次提醒后的指定时间后提醒。</string>
 </resources>
