--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,4 +217,6 @@
     <string name="use_relative_date_time_summary">Show relative date/time for reminders</string>
     <string name="use_relative_date_time">Relative date/time</string>
     <string name="invalid_amount">The amount has to contain a number to enable medicine stock tracking for this reminder.</string>
+    <string name="time_reminder_type_hint">Reminds at a specific time of day.</string>
+    <string name="interval_reminder_type_hint">Reminds after a specified time has elapsed after the last reminder.</string>
 </resources>
