--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -215,4 +215,6 @@
     <string name="invalid_amount">Het bedrag moet een getal bevatten om de medicijnvoorraad-tracking voor deze herinnering in te schakelen.</string>
     <string name="time_reminder_type_hint">Herinnert op een specifiek tijdstip.</string>
     <string name="interval_reminder_type_hint">Herinnert nadat een opgegeven tijd is verstreken na de laatste herinnering.</string>
+    <string name="sticky_on_lockscreen">Aanhoudende herinneringen op het vergrendelscherm</string>
+    <string name="sticky_on_lockscreen_summary">Herinneringen kunnen niet worden verwijderd vanaf het vergrendelscherm, alleen vanuit de meldingenlade</string>
 </resources>
