--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -222,4 +222,6 @@
     <string name="invalid_amount">Сумма должна содержать число, чтобы включить отслеживание запасов лекарств для этого напоминания.</string>
     <string name="time_reminder_type_hint">Напоминание в определенное время суток.</string>
     <string name="interval_reminder_type_hint">Напоминает по истечении заданного времени после последнего напоминания.</string>
+    <string name="sticky_on_lockscreen">Постоянные напоминания на экране блокировки</string>
+    <string name="sticky_on_lockscreen_summary">Напоминания нельзя отменить на экране блокировки, только в ящике уведомлений</string>
 </resources>
