--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -220,4 +220,6 @@
     <string name="invalid_amount">Le montant doit contenir un nombre pour activer le suivi du stock de médicaments pour ce rappel.</string>
     <string name="time_reminder_type_hint">Rappelle à une heure précise de la journée.</string>
     <string name="interval_reminder_type_hint">Rappelle après un délai spécifié après le dernier rappel.</string>
+    <string name="sticky_on_lockscreen">Rappels persistants sur l&amp;apos;écran de verrouillage</string>
+    <string name="sticky_on_lockscreen_summary">Les rappels ne peuvent pas être supprimés à partir de l&amp;apos;écran de verrouillage, mais uniquement à partir du tiroir de notifications</string>
 </resources>
