--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -225,4 +225,6 @@
     <string name="invalid_amount">Kwota musi zawierać liczbę, aby włączyć śledzenie zapasów leków dla tego przypomnienia.</string>
     <string name="time_reminder_type_hint">Przypomina o określonej porze dnia.</string>
     <string name="interval_reminder_type_hint">Przypomina po upływie określonego czasu od ostatniego przypomnienia.</string>
+    <string name="sticky_on_lockscreen">Stałe przypomnienia na ekranie blokady</string>
+    <string name="sticky_on_lockscreen_summary">Przypomnień nie można odrzucić z ekranu blokady, a jedynie z szuflady powiadomień</string>
 </resources>
