--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -215,4 +215,6 @@
     <string name="invalid_amount">Bu hatırlatıcı için ilaç stok takibini etkinleştirmek için miktar bir sayı içermelidir.</string>
     <string name="time_reminder_type_hint">Günün belirli bir saatinde hatırlatır.</string>
     <string name="interval_reminder_type_hint">Son hatırlatmadan sonra belirli bir süre geçtikten sonra hatırlatır.</string>
+    <string name="sticky_on_lockscreen">Kilit ekranında kalıcı hatırlatıcılar</string>
+    <string name="sticky_on_lockscreen_summary">Hatırlatıcılar kilit ekranından kapatılamaz, sadece bildirim çekmecesinden kapatılabilir</string>
 </resources>
