--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -222,4 +222,5 @@
     <string name="interval_reminder_type_hint">Richiama dopo un determinato periodo di tempo dall&amp;apos;ultimo richiamo.</string>
     <string name="sticky_on_lockscreen">Promemoria persistenti sulla schermata di blocco</string>
     <string name="sticky_on_lockscreen_summary">I promemoria non possono essere eliminati dalla schermata di blocco, ma solo dal cassetto delle notifiche</string>
+    <string name="big_notifications">Grandi notifiche</string>
 </resources>
