--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -217,4 +217,5 @@
     <string name="interval_reminder_type_hint">Son hatırlatmadan sonra belirli bir süre geçtikten sonra hatırlatır.</string>
     <string name="sticky_on_lockscreen">Kilit ekranında kalıcı hatırlatıcılar</string>
     <string name="sticky_on_lockscreen_summary">Hatırlatıcılar kilit ekranından kapatılamaz, sadece bildirim çekmecesinden kapatılabilir</string>
+    <string name="big_notifications">Büyük bildirimler</string>
 </resources>
