--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -227,4 +227,5 @@
     <string name="interval_reminder_type_hint">Нагадує через певний час після останнього нагадування.</string>
     <string name="sticky_on_lockscreen">Постійні нагадування на екрані блокування</string>
     <string name="sticky_on_lockscreen_summary">Нагадування не можна відкинути з екрана блокування, тільки зі скриньки сповіщень</string>
+    <string name="big_notifications">Великі сповіщення</string>
 </resources>
