--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -186,7 +186,7 @@
     <string name="once_below_threshold">Einmal beim Erreichen des Schwellwerts</string>
     <string name="always_below_threshold">Immer, wenn der Schwellwert unterschritten wird</string>
     <string name="out_of_stock_notification">Es ist nur noch %2$s von %1$s übrig!\nBitte füllen Sie das Medikament bald nach.</string>
-    <string name="medicine_stock_string">%1$s übrig%2$s</string>
+    <string name="medicine_stock_string">%1$s übrig</string>
     <string name="out_of_stock_notification_title">Erinnerung an Medikamentenvorrat</string>
     <string name="medicine_stock">Medikamentenvorrat</string>
     <string name="amount">Anzahl</string>
