--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -191,7 +191,7 @@
     <string name="once_below_threshold">Una vez al caer por debajo del umbral</string>
     <string name="always_below_threshold">Siempre que esté por debajo del umbral</string>
     <string name="out_of_stock_notification">¡Sólo quedan %2$s de %1$s!\nConsidere rellenar la medicina pronto.</string>
-    <string name="medicine_stock_string">%1$s restantes%2$s</string>
+    <string name="medicine_stock_string">%1$s restantes</string>
     <string name="out_of_stock_notification_title">Recordatorio de medicamentos agotados</string>
     <string name="medicine_stock">Stock de medicamentos</string>
     <string name="amount">Cantidad</string>
