--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -191,7 +191,7 @@
     <string name="once_below_threshold">Una volta quando si scende sotto la soglia</string>
     <string name="always_below_threshold">Sempre quando è al di sotto della soglia</string>
     <string name="out_of_stock_notification">È rimasto solo il %2$s di %1$s!\nEffettua una nuova scorta del medicinale.</string>
-    <string name="medicine_stock_string">%1$s rimaste%2$s</string>
+    <string name="medicine_stock_string">%1$s rimaste</string>
     <string name="out_of_stock_notification_title">Promemoria per fare scorta di medicinali</string>
     <string name="medicine_stock">Scorta di medicinali</string>
     <string name="amount">Quantità</string>
