--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -193,7 +193,7 @@
     <string name="once_below_threshold">Один раз при падении ниже порога</string>
     <string name="always_below_threshold">Всегда, когда ниже порога</string>
     <string name="out_of_stock_notification">Осталось всего %2$s от %1$s!\nПодумайте о том, чтобы пополнить запасы лекарства в ближайшее время.</string>
-    <string name="medicine_stock_string">Осталось %1$s %2$s</string>
+    <string name="medicine_stock_string">Осталось %1$s</string>
     <string name="out_of_stock_notification_title">Напоминание об отсутствии лекарств на складе</string>
     <string name="medicine_stock">Запас медикаментов</string>
     <string name="amount">Сумма</string>
