--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -215,5 +215,5 @@
     <string name="interval_reminder_type_hint">Erinnert nach einer bestimmten Zeit, die nach der letzten Erinnerung vergangen ist.</string>
     <string name="sticky_on_lockscreen">Dauerhafte Erinnerungen auf dem Sperrbildschirm</string>
     <string name="sticky_on_lockscreen_summary">Erinnerungen können nicht über den Sperrbildschirm, sondern nur über die Benachrichtigungsleiste verworfen werden</string>
-    <string name="big_notifications">Große Benachrichtigungen</string>
+    <string name="big_notifications">Große Benachrichtigungsknöpfe</string>
 </resources>
