--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -220,5 +220,5 @@
     <string name="interval_reminder_type_hint">Rappelle après un délai spécifié après le dernier rappel.</string>
     <string name="sticky_on_lockscreen">Rappels persistants sur l&amp;apos;écran de verrouillage</string>
     <string name="sticky_on_lockscreen_summary">Les rappels ne peuvent pas être supprimés à partir de l&amp;apos;écran de verrouillage, mais uniquement à partir du tiroir de notifications</string>
-    <string name="big_notifications">Grandes notifications</string>
+    <string name="big_notifications">Gros boutons de notification</string>
 </resources>
