--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -222,5 +222,5 @@
     <string name="interval_reminder_type_hint">Напоминает по истечении заданного времени после последнего напоминания.</string>
     <string name="sticky_on_lockscreen">Постоянные напоминания на экране блокировки</string>
     <string name="sticky_on_lockscreen_summary">Напоминания нельзя отменить на экране блокировки, только в ящике уведомлений</string>
-    <string name="big_notifications">Большие уведомления</string>
+    <string name="big_notifications">Большие кнопки уведомлений</string>
 </resources>
